--- a/styles.css
+++ b/styles.css
@@ -199,8 +199,12 @@ body {
 }
 
 @media (min-width: 900px) {
-  .player {
-    grid-template-columns: 1.2fr 0.8fr;
-    align-items: start;
+  .controls {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    align-items: center;
+  }
+
+  .controls .control-block:nth-child(2) {
+    grid-column: span 2;
   }
 }
